ReModeled day logger UI
Finished re-writing the day logger UI.
https://app.asana.com/0/30584708299013/30943290874906

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 	<!-- FormValidation plugin and the class supports validating Bootstrap form -->
 <script src="./vendor/formvalidation/dist/jquery.validate.js"></script>
 <script src="./vendor/formvalidation/dist/additional-methods.js"></script>
-<!-- <script src="./vendor/formvalidation/dist/js/framework/bootstrapValidator.min.js"></script> -->	<script src="./js/signup.js"></script>
+<!-- <script src="./vendor/formvalidation/dist/js/framework/bootstrapValidator.min.js"></script> -->	
+<script src="./js/signup.js"></script>
 <script type="text/javascript" src="js/jquery.tooltipster.min.js"></script>
 </head>
 <body>
